[tool.poetry]
name = "oa-helper"
version = "1.0"
description = "auto send the lastest oa news to your email"
authors = ["theocheng <zlz_gty@foxmail.com>"]
license = "No"
readme = "README.md"
packages = [{include = "oa_helper"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
lxml = "^4.9.2"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
